many paper edits

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,44 +1,48 @@
 \section{Conclusion}
 
-We examined the gyrochronology relations using the velocity dispersions of
-field stars with measured rotation periods.
+We examined the rotational evolution of \kepler\ field stars using their
+velocity dispersions as a proxy for age.
 We found that old groups of cool dwarfs selected to be coeval using the
 \citet{angus2019} gyrochronology relation do {\it not} have the same velocity
 dispersion across all temperatures.
 This implies that the \citet{angus2019} relation, which is based on the
 period-color relation of the 650 Myr Praesepe cluster, does not correctly
 describe the period-age-color/\teff\ relation for old stars.
-It appears that the period-color/\teff\ relation changes shape over time, \ie\
-the period-color/\teff\ relation and the period-age relation are
-non-separable.
-At ages younger than $\sim$1 Gyr, rotation period is anti-correlated with
-\teff: cooler stars spin more slowly than hotter stars of the same age.
-However, at old ages the opposite is true: cooler stars spin more rapidly than
-hotter stars of the same age.
-The period-color/\teff\ relation appears to start flattening out after $\sim$1
-Gyr (see figure \ref{fig:age_cut}), potentially around the same age, or just
-older than the period gap which is located at a gyrochronal age of around
-$\sim$1.1 Gyr (see figure \ref{fig:dispersion_period_teff}).
-This gap may represent a significant transitional epoch in the magnetic
-behavior of stars.
+It appears that the period-color/\teff\ relation changes shape over time in a
+way that qualitatively agrees with theoretical that which include a
+mass-dependent core-envelope angular momentum transport \citep{spada2019}.
+At young ages, rotation period is anti-correlated with \teff: cooler stars
+spin more slowly than hotter stars of the same age.
+However, at intermediate ages the relation flattens out and K dwarfs rotate at
+the same rate, regardless of mass.
+At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
+dwarfs of the same age.
+We speculate that the rotation period gap \citep{mcquillan2014} may separate
+a young regime where stellar rotation periods decrease with increasing mass
+from an old regime where periods increase with increasing mass, however more
+data are needed to provide a conclusive result.
+% The period-color/\teff\ relation seems to start flattening out after $\sim$1
+% Gyr (see figure \ref{fig:age_cut}), potentially around the same age, or just
+% older than the period gap which is located at a gyrochronal age of around
+% $\sim$1.1 Gyr (see figure \ref{fig:dispersion_period_teff}).
 Finally, when velocity dispersion is interpreted as an age proxy, it appears
 that the oldest stars in the \mct\ catalog are cooler than 4500 K, which
-suggests that lower-mass stars remain active for longer and their rotation
-periods can be measured at older ages.
-We outlined a number of scenarios which could provide alternative
-explainations for these observations, including incorrect dust corrections for
-the lowest-mass stars and an excess of companions increasing the velocity
-dispersion for these stars.
+suggests that lower-mass stars remain active for longer, allowing their
+rotation periods to be measured at older ages.
+% We outlined a number of scenarios which could provide alternative
+% explanations for these observations, including incorrect dust corrections for
+% the lowest-mass stars and an excess of companions increasing the velocity
+% dispersion for these stars.
 
-If the period-color/\teff\ relation does invert at old ages as our results
-suggest, this would be a paradigm shift for gyrochronology.
-Stellar spin-down rate is thought to be directly tied to magnetic field
-strength, and the deeper convection zones of cooler stars generate stronger
-magnetic fields which {\it should} lead to more efficient angular momentum
-loss.
-However, the micro- and macro-physics of stellar structure and evolution and
-magnetic dynamo models are extremely complicated and a lot is still unknown
-about the magnetic behavior of stars.
-Observations like these can provide useful constraints for physical models,
-and may help to reveal new physical processes at work in stars like our own
-Sun and other planet hosts.
+% If the period-color/\teff\ relation does invert at old ages as our results
+% suggest, this would be a paradigm shift for gyrochronology.
+% Stellar spin-down rate is thought to be directly tied to magnetic field
+% strength, and the deeper convection zones of cooler stars generate stronger
+% magnetic fields which {\it should} lead to more efficient angular momentum
+% loss.
+% However, the micro- and macro-physics of stellar structure and evolution and
+% magnetic dynamo models are extremely complicated and a lot is still unknown
+% about the magnetic behavior of stars.
+% Observations like these can provide useful constraints for physical models,
+% and may help to reveal new physical processes at work in stars like our own
+% Sun and other planet hosts.
