--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -82,18 +82,18 @@
 approach to calibrating gyrochronology}
 
 \author{%
-    Ruth Angus \etal}
-    % Angus Beane,
-    % Jennifer van Saders,
-    % Elisabeth Newton,
-    % Adrian Price-Whelan,
-    % Travis Berger,
-    % Jason Curtis,
+    Ruth Angus,
+    Angus Beane,
+    Adrian Price-Whelan,
+    Elisabeth Newton,
+    Jennifer van Saders,
+    Travis Berger,
+    Jason Curtis,
+    Lauren Anderson,
+    Rocio Kiman}
     % Dan Foreman-Mackey,
-    % Lauren Anderson,
     % Megan Bedell,
     % Jackie Faherty,
-    % Rocio Kiman,
     % Melissa Ness}
 
 % \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
@@ -105,26 +105,26 @@ approach to calibrating gyrochronology}
 
 % Still to do: deredden before calculating ages.
 
-% Word limit: 3500, currently 3183
+% Word limit: 3500, currently 3702
 
-% Word limit: 250, currently 206
+% Word limit: 250, currently 199
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750, currently: 854
+% Word limit: 750, currently: 815
 \include{intro}
 
-% Word limit: 500, currently 332
+% Word limit: 1000, currently 1220
 \include{method}
 
-% Word limit: 500, currently 1178
+% Word limit: 1000, currently 1184
 \include{results}
 
 % Word limit: 500
 \include{discussion}
 
-% Word limit: 250, currently 263
+% Word limit: 250, currently 216
 \include{conclusion}
 
 \include{acknowledgements}
