--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -12,16 +12,19 @@ their rotational evolution and demonstrate that kinematics have potential to
 be a useful tool for calibrating gyrochronology.
 At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 to the Praesepe cluster, accurately predicts the relative ages of stars.
-At these young ages, lower-mass stars lose angular momentum more quickly than
-higher mass stars and therefore rotate more slowly at the same age.
-However, at old ages, late G and early K dwarfs rotate {\it faster} than late
-K dwarfs of the same age.
-This implies that low-mass stars lose angular momentum more slowly than
-higher-mass stars after a certain age or Rossby number.
-Our results, based on field star rotation periods, align with recent findings
-from the rotation periods of stars in middle-aged open clusters and
+At these young ages, lower-mass stars spin more slowly than higher-mass stars
+because their stronger magnetic fields lead to more efficient angular momentum
+loss.
+However, at old ages we find that late G and early K dwarfs rotate {\it
+faster} than late K dwarfs of the same age.
+% These oThis may be a feature of angular momentum redistribution in the stellar
+% interior.
+% This implies that low-mass stars lose angular momentum more slowly than
+% higher-mass stars after a certain age or Rossby number.
+These results, based on field star rotation periods, align with recent
+findings from the rotation periods of stars in middle-aged open clusters and
 theoretical models that vary the rate of surface-to-core angular momentum
-transport.
+transport as a function of time and mass.
 Finally, we find no evidence for mass-dependent heating in a sample of K and M
 dwarfs in the \kepler\ field.
 
