--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -288,6 +288,38 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{barnes2010,
+   author = {{Barnes}, S.~A.},
+    title = "{A Simple Nonlinear Model for the Rotation of Main-sequence Cool Stars. I. Introduction, Implications for Gyrochronology, and Color-Period Diagrams}",
+  journal = {\apj},
+ keywords = {convection, methods: analytical, open clusters and associations: general, stars: evolution, stars: late-type, stars: rotation},
+     year = 2010,
+    month = oct,
+   volume = 722,
+    pages = {222-234},
+      doi = {10.1088/0004-637X/722/1/222},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...722..222B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{meibom2015,
+   author = {{Meibom}, S. and {Barnes}, S.~A. and {Platais}, I. and {Gilliland}, R.~L. and
+	{Latham}, D.~W. and {Mathieu}, R.~D.},
+    title = "{A spin-down clock for cool stars from observations of a 2.5-billion-year-old cluster}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {1501.05651},
+ primaryClass = "astro-ph.SR",
+     year = 2015,
+    month = jan,
+   volume = 517,
+    pages = {589-591},
+      doi = {10.1038/nature14118},
+   adsurl = {http://adsabs.harvard.edu/abs/2015Natur.517..589M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{mamajek2008,
    author = {{Mamajek}, E.~E. and {Hillenbrand}, L.~A.},
     title = "{Improved Age Estimation for Solar-Type Dwarfs Using Activity-Rotation Diagnostics}",
@@ -599,6 +631,26 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{casagrande2011,
+       author = {{Casagrande}, L. and {Sch{\"o}nrich}, R. and {Asplund}, M. and
+         {Cassisi}, S. and {Ram{\'\i}rez}, I. and {Mel{\'e}ndez}, J. and
+         {Bensby}, T. and {Feltzing}, S.},
+        title = "{New constraints on the chemical evolution of the solar neighbourhood and Galactic disc(s). Improved astrophysical parameters for the Geneva-Copenhagen Survey}",
+      journal = {\aap},
+     keywords = {stars: abundances, stars: fundamental parameters, Hertzsprung-Russell and C-M diagrams, stars: kinematics and dynamics, Galaxy: disk, solar neighborhood, Astrophysics - Galaxy Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2011",
+        month = "Jun",
+       volume = {530},
+          eid = {A138},
+        pages = {A138},
+          doi = {10.1051/0004-6361/201016276},
+archivePrefix = {arXiv},
+       eprint = {1103.4651},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011A&A...530A.138C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{rebull2017,
    author = {{Rebull}, L.~M. and {Stauffer}, J.~R. and {Hillenbrand}, L.~A. and
@@ -758,18 +810,246 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{robin2012,
+       author = {{Robin}, A.~C. and {Luri}, X. and {Reyl{\'e}}, C. and {Isasi}, Y. and
+         {Grux}, E. and {Blanco-Cuaresma}, S. and {Arenou}, F. and
+         {Babusiaux}, C. and {Belcheva}, M. and {Drimmel}, R. and {Jordi}, C. and
+         {Krone-Martins}, A. and {Masana}, E. and {Mauduit}, J.~C. and
+         {Mignard}, F. and {Mowlavi}, N. and {Rocca-Volmerange}, B. and
+         {Sartoretti}, P. and {Slezak}, E. and {Sozzetti}, A.},
+        title = "{Gaia Universe model snapshot. A statistical analysis of the expected contents of the Gaia catalogue}",
+      journal = {\aap},
+     keywords = {methods: data analysis, Galaxy: stellar content, catalogs, Galaxy: structure, galaxies: statistics, stars: statistics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2012",
+        month = "Jul",
+       volume = {543},
+          eid = {A100},
+        pages = {A100},
+          doi = {10.1051/0004-6361/201118646},
+archivePrefix = {arXiv},
+       eprint = {1202.0132},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012A&A...543A.100R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{spada2019,
+       author = {{Spada}, F. and {Lanzafame}, A.~C.},
+        title = "{On the competing effect of wind braking and interior coupling in the rotational evolution of solar-like stars}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Aug",
+          eid = {arXiv:1908.00345},
+        pages = {arXiv:1908.00345},
+archivePrefix = {arXiv},
+       eprint = {1908.00345},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190800345S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+/* Explanation for slowly rotating cool stars and rapidly rotating hot stars. */
+/* Establishing the delineation between stars with convection zones and purely */
+/* radiative stars. Connecting the idea that convective zones lead to angular */
+/* momentum loss. */
+@ARTICLE{schatzman1962,
+   author = {{Schatzman}, E.},
+    title = "{A theory of the role of magnetic activity during star formation}",
+  journal = {Annales d'Astrophysique},
+     year = 1962,
+    month = feb,
+   volume = 25,
+    pages = {18},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1962AnAp...25...18S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+/* Wind-driven magnetic braking */
+@ARTICLE{weber1967,
+   author = {{Weber}, E.~J. and {Davis}, Jr., L.},
+    title = "{The Angular Momentum of the Solar Wind}",
+  journal = {\apj},
+     year = 1967,
+    month = apr,
+   volume = 148,
+    pages = {217-227},
+      doi = {10.1086/149138},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1967ApJ...148..217W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+/* Rotation periods decrease with age. */
+@ARTICLE{kraft1967,
+   author = {{Kraft}, R.~P.},
+    title = "{Studies of Stellar Rotation. V. The Dependence of Rotation on Age among Solar-Type Stars}",
+  journal = {\apj},
+     year = 1967,
+    month = nov,
+   volume = 150,
+    pages = {551},
+      doi = {10.1086/149359},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1967ApJ...150..551K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+/* Models for magnetic braking. */
+@ARTICLE{kawaler1988,
+   author = {{Kawaler}, S.~D.},
+    title = "{Angular momentum loss in low-mass stars}",
+  journal = {\apj},
+ keywords = {Angular Momentum, Stellar Mass Ejection, Stellar Models, Stellar Rotation, Stellar Winds, Pre-Main Sequence Stars, Stellar Evolution, Stellar Interiors, Stellar Magnetic Fields},
+     year = 1988,
+    month = oct,
+   volume = 333,
+    pages = {236-247},
+      doi = {10.1086/166740},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1988ApJ...333..236K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{pinsonneault1989,
+   author = {{Pinsonneault}, M.~H. and {Kawaler}, S.~D. and {Sofia}, S. and
+	{Demarque}, P.},
+    title = "{Evolutionary models of the rotating sun}",
+  journal = {\apj},
+ keywords = {Abundance, Solar Interior, Solar Rotation, Stellar Evolution, Stellar Models, Angular Velocity, Beryllium, Lithium, Periodic Variations, Solar Velocity, Stellar Rotation},
+     year = 1989,
+    month = mar,
+   volume = 338,
+    pages = {424-452},
+      doi = {10.1086/167210},
+   adsurl = {http://adsabs.harvard.edu/abs/1989ApJ...338..424P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{matt2012,
+   author = {{Matt}, S.~P. and {MacGregor}, K.~B. and {Pinsonneault}, M.~H. and
+	{Greene}, T.~P.},
+    title = "{Magnetic Braking Formulation for Sun-like Stars: Dependence on Dipole Field Strength and Rotation Rate}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1206.2354},
+ primaryClass = "astro-ph.SR",
+ keywords = {magnetohydrodynamics: MHD, stars: magnetic field, stars: rotation, stars: solar-type, stars: winds, outflows},
+     year = 2012,
+    month = aug,
+   volume = 754,
+      eid = {L26},
+    pages = {L26},
+      doi = {10.1088/2041-8205/754/2/L26},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...754L..26M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{stark1989,
+       author = {{Stark}, Antony A. and {Brand}, Jan},
+        title = "{Kinematics of Molecular Clouds. II. New Data on Nearby Giant Molecular Clouds}",
+      journal = {\apj},
+     keywords = {Computational Astrophysics, Milky Way Galaxy, Molecular Clouds, Kinematics, Radial Velocity, Velocity Distribution, Astrophysics, GALAXIES: INTERNAL MOTIONS, INTERSTELLAR: MOLECULES, RADIAL VELOCITIES},
+         year = "1989",
+        month = "Apr",
+       volume = {339},
+        pages = {763},
+          doi = {10.1086/167334},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1989ApJ...339..763S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{stark2005,
+       author = {{Stark}, Antony A. and {Lee}, Youngung},
+        title = "{The Scale Height of Giant Molecular Clouds Is Less than That of Smaller Clouds}",
+      journal = {\apjl},
+     keywords = {Galaxy: Structure, ISM: Clouds, ISM: Molecules, Astrophysics},
+         year = "2005",
+        month = "Feb",
+       volume = {619},
+       number = {2},
+        pages = {L159-L162},
+          doi = {10.1086/427936},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0403631},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...619L.159S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{martig2014,
+       author = {{Martig}, Marie and {Minchev}, Ivan and {Flynn}, Chris},
+        title = "{Dissecting simulated disc galaxies - II. The age-velocity relation}",
+      journal = {\mnras},
+     keywords = {methods: numerical, galaxies: formation, galaxies: kinematics and dynamics, galaxies: structure, Astrophysics - Astrophysics of Galaxies},
+         year = "2014",
+        month = "Sep",
+       volume = {443},
+       number = {3},
+        pages = {2452-2462},
+          doi = {10.1093/mnras/stu1322},
+archivePrefix = {arXiv},
+       eprint = {1405.1727},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.443.2452M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{newton2016,
+       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau}, David and
+         {Berta-Thompson}, Zachory K. and {Dittmann}, Jason A. and
+         {West}, Andrew A.},
+        title = "{The Rotation and Galactic Kinematics of Mid M Dwarfs in the Solar Neighborhood}",
+      journal = {\apj},
+     keywords = {stars: kinematics and dynamics, stars: low-mass, stars: rotation, starspots, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = "2016",
+        month = "Apr",
+       volume = {821},
+       number = {2},
+          eid = {93},
+        pages = {93},
+          doi = {10.3847/0004-637X/821/2/93},
+archivePrefix = {arXiv},
+       eprint = {1511.00957},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...821...93N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{howell2014,
+       author = {{Howell}, Steve B. and {Sobeck}, Charlie and {Haas}, Michael and
+         {Still}, Martin and {Barclay}, Thomas and {Mullally}, Fergal and
+         {Troeltzsch}, John and {Aigrain}, Suzanne and {Bryson}, Stephen T. and
+         {Caldwell}, Doug and {Chaplin}, William J. and {Cochran}, William D. and
+         {Huber}, Daniel and {Marcy}, Geoffrey W. and {Miglio}, Andrea and
+         {Najita}, Joan R. and {Smith}, Marcie and {Twicken}, J.~D. and
+         {Fortney}, Jonathan J.},
+        title = "{The K2 Mission: Characterization and Early Results}",
+      journal = {\pasp},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2014",
+        month = "Apr",
+       volume = {126},
+       number = {938},
+        pages = {398},
+          doi = {10.1086/676406},
+archivePrefix = {arXiv},
+       eprint = {1402.5163},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PASP..126..398H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{astropy2018,
-Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
-Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy},
-Doi = {10.3847/1538-3881/aabc4f},
-Eid = {123},
-Journal = {\aj},
-Keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
-Month = Sep,
-Pages = {123},
-Primaryclass = {astro-ph.IM},
-Title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
-Volume = {156},
-Year = 2018,
-Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
+    Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
+    Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy)},
+    doi = {10.3847/1538-3881/aabc4f},
+    Eid = {123},
+    Journal = {\aj},
+    Keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
+    Month = Sep,
+    Pages = {123},
+    Primaryclass = {astro-ph.IM},
+    Title = {{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}},
+    Volume = {156},
+    Year = 2018,
+    Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
