--- a/paper/method.tex
+++ b/paper/method.tex
@@ -58,19 +58,19 @@ between these properties.
 Stars with negative parallaxes, parallax signal-to-noise ratios less than 10,
 stars fainter than 16th magnitude, stars with absolute \vb\ uncertainties
 greater than 1 \kms\, and stars with galactic latitudes greater than
-15\degrees\ were removed from the sample.
-Because \vb\ is only a close approximation to \vz\ at low galactic latitudes,
-and because latitude is correlated with stellar mass (lower mass stars are
-older and tend to be preferentially located at high $b$, although this trends
-is greatly reduced for stars cooler than 5000 K), we found that excluding
-stars with $b > 15$\degrees\ reduced the number of \vb\ outliers at low
-stellar mass.
-15\degrees\ was found to be an adequate compromise between maintaining a close
-relationship between \vb\ and \vz\ and retaining a sample large enough to
-provide meaningful results.
-Reducing this cut to 10\degrees\ resulted in a sample size too small to reveal
-trends in the data, and intermediate cuts did not significantly change the
-results.
+15\degrees\ (justification provided below) were removed from the sample.
+% Because \vb\ is only a close approximation to \vz\ at low galactic latitudes,
+% and because latitude is correlated with stellar mass (lower mass stars are
+% older and tend to be preferentially located at high $b$, although this trends
+% is greatly reduced for stars cooler than 5000 K), we found that excluding
+% stars with $b > 15$\degrees\ reduced the number of \vb\ outliers at low
+% stellar mass.
+% 15\degrees\ was found to be an adequate compromise between maintaining a close
+% relationship between \vb\ and \vz\ and retaining a sample large enough to
+% provide meaningful results.
+% Reducing this cut to 10\degrees\ resulted in a sample size too small to reveal
+% trends in the data, and intermediate cuts did not significantly change the
+% results.
 % We also found that the anti-correlation between stellar mass and $b$ is
 % negligable for stars cooler than 5000 K.
 % For this reason, and because the rotational evolution of old, G stars does not
@@ -78,8 +78,20 @@ results.
 % restricted our sample to temperatures between \tmin\ and 5000 K, \ie\ K
 % dwarfs.
 
-\subsection{Establishing \vb\ as an age proxy}
+\subsection{Validating \vb\ dispersion as an age proxy}
 \label{sec:mass-dependent-heating}
+
+There are two main reasons why \vb\ velocity dispersion may not be a good age
+proxy.
+Firstly, mass-dependent heating may act on the sample, meaning that velocity
+dispersion depends on both age and mass, so cannot be interpreted as a simple
+age proxy.
+Secondly, since stars in the \kepler\ field have a range of galactic
+latitudes, using \vb\ as a stand-in for \vz\ may not be equally valid for all
+stars, introducing a velocity bias for high latitude stars (which are more
+likely to be cooler and older).
+In this section we demonstrate that neither of these problems seem to be a
+significant issue for our data.
 
 If lower-mass stars experience greater velocity changes when gravitationally
 perturbed and are dynamically heated more efficiently than higher-mass stars,
@@ -87,7 +99,6 @@ velocity dispersion would be a function of {\it both} age and mass and cannot
 be straightforwardly interpreted as an age proxy.
 So, in order to establish whether \sigmavb\ can be used as an age proxy, we
 searched for signs of mass-dependent heating within the \kepler\ field.
-
 Mass-dependent dynamical heating has not been unambiguously observed in the
 galactic disk because of the strong anti-correlation between stellar mass and
 stellar age.
@@ -96,28 +107,30 @@ are also older on average.
 This mass-age degeneracy is highly reduced in M dwarfs because their
 main-sequence lifetimes are longer than the age of the Universe, however no
 evidence for mass-dependent heating has been found in M dwarfs
-\citep{faherty2009, newton2016}.
+\citep[\eg][]{faherty2009, newton2016}.
 
 To investigate whether mass-dependent heating could be acting on the \kepler\
 sample, we selected late K and M dwarfs observed by both \kepler\ and \gaia,
 whose MS lifetimes exceed around 11 Gyrs and are therefore representative of
 the initial mass function.
 We could not perform this analysis on the \mct\ sample, because only stars
-with {\it detectable} rotation periods appear there.
-Since lower-mass stars stay active for longer it is likely that there are more
-old stars (with larger velocity dispersions) at low masses in this sample.
+with {\it detectable} rotation periods are included in it.
+Since lower-mass stars stay active for longer it is likely that the oldest
+stars in this sample have low masses.
 We selected all \kepler\ targets with dereddened \gaia\ \gcolor\ colors
 greater than 1.2 (corresponding to an effective temperature $\lesssim$
 4800 K) and absolute \gaia\ $G$-band magnitudes $<$ 4.
 We also eliminated visual binaries by removing stars above a 6th order
 polynomial, fit to the MS on the \gaia\ CMD.
-This polynomial-based binary cut was slightly different to the polynomial cut
-used...
-We then applied the quality cuts described in section \ref{sec:the_data}.
+We then applied the quality cuts described above in section
+\ref{sec:the_data}.
 To search for evidence of mass-dependent heating we calculated the (\vb)
 velocity dispersion of stars in effective temperature bins.
 Sigma clipping was performed at the 3$\sigma$ level to remove high velocity
 outliers before calculating the standard deviation of stars in each bin.
+These high velocity outliers may be very old late K and M dwarfs, or they
+result from using \vb\ instead of \vz, which introduces additional velocity
+scatter.
 
 Figure \ref{fig:vb_vs_teff} shows velocity and velocity dispersion
 as a function of effective temperature (calculated by transforming dereddened
@@ -131,18 +144,47 @@ smaller velocities.
 The essential point is that we do not find evidence for mass-dependent heating
 acting on stars in the \kepler\ field, meaning \sigmavb\ {\it can} be used as
 an age proxy.
-We performed the same analysis on the 537 stars in this sample with RVs using
-{\it vertical} velocity (\vz) and found the slope of the velocity
-dispersion-temperature relation was consistent with zero.
+We also examined the {\it vertical} velocities of the 537 stars in this sample
+with RV measurements.
+Again, we found no evidence for mass-dependent heating: the slope of the
+velocity dispersion-temperature relation was consistent with zero.
 
-Since we used \vb, not \vz\ in our analysis, it is possible that an
-anti-correlation between \teff\ and galactic latitude, $b$, could influence
-our results.
-Stars at higher latitudes have additional velocity components in the ${\bf x}$
-and ${\bf y}$ directions, which could increase \vb\ but not \vz.
-Again however, since the relationship between \sigmavb\ and \teff\ is
-positively, not negatively correlated for cool stars in the \kepler\ field,
-this effect is probably too small to influence our results.
+At a galactic latitude of zero, $v_b=v_z$, however for increasing values of
+$b$, this equivalence becomes an approximation that grows noisier with $b$.
+To test the validity of the \vb$\sim$\vz\ approximation over a range of
+latitudes we downloaded stellar data from the \Gaia\ Universe Model Snapshot
+(GUMS) simulation -- a simulated \Gaia\ catalog \citep{robin2012}.
+We downloaded stars from four pointings in the \kepler\ field with galactic
+latitudes of around 5\degrees, 10\degrees, 15\degrees, and 20\degrees, out to
+a limiting magnitude of 16 dex.
+We found that \vb\ is drawn from a heavy-tailed distribution, centered on \vz,
+with a standard deviation (calculated as 1.5 $\times$ the median absolute
+deviation) that increased with increasing $b$.
+The standard deviation of \vz-\vb\ was around 3kms$^{-1}$ at $b \sim 5^\circ
+$, 4kms${^-1}$ at 10$^\circ$, 6kms${^-1}$ at 15$^\circ$, and 9kms${^-1}$ at
+20$^\circ$.
+Since we are concerned with velocity {\it dispersions}, rather than velocities
+themselves, we also compared the \vb\ and \vz\ velocity dispersions for stars
+downloaded from the GUMS simulation.
+For stars at galactic latitudes of 15\degrees\ or less, \sigmavb\ was
+consistent with $\sigma_{v{\bf z}}$, within uncertainties, however, at higher
+latitudes the two quantities became significantly different.
+For this reason we proceeded by only including stars with galactic latitudes
+less than 15\degrees\ in our analysis.
+
+% Since we use \vb, not \vz\ in our analysis, it is possible that the sample
+% selection function could influence our results.
+% For example, higher-mass stars tend to be younger and reside closer to the
+% galactic disk mid-plane (low galactic latitudes).
+% Since \vb\ is only similar to \vz\ at low latitudes, this could mean that
+% lower-mass stars typically have greater velocity dispersions due to .
+% \teff\ and galactic latitude, $b$,
+% could result in
+% Stars at higher latitudes have additional velocity components in the ${\bf x}$
+% and ${\bf y}$ directions, which could increase \vb\ but not \vz.
+% Again however, since the relationship between \sigmavb\ and \teff\ is
+% positively, not negatively correlated for cool stars in the \kepler\ field,
+% this effect is probably too small to influence our results.
 
 
 \begin{figure}
